--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -47,7 +47,7 @@ pipeline {
     }
     stage('Update Deployment File') {
         environment {
-            GIT_REPO_NAME = "jenkins-cicd"
+            GIT_REPO_NAME = "jenkins-cicd-manifest"
             GIT_USER_NAME = "Lavanyags11"
         }
         steps {
